# advent

./: .gitignore  .hspec  CHANGELOG.md  LICENSE  README.md  advent.cabal  output_6_0_18.txt  output_6_0_256.txt  output_6_0_80.txt  output_6_1_256.txt  stack.yaml
app/: Main.hs
src/: Advent.hs
test/: Spec.hs
