cabal-version:       2.4
name:                advent
version:             0.0.0.0
synopsis:            2021 advent of code
description:         2021 advent of code
homepage:            https://github.com/chrisaupshaw/advent
bug-reports:         https://github.com/chrisaupshaw/advent/issues
license:             MIT
license-file:        LICENSE
author:              Chris Upshaw (From Yukari)
maintainer:          Chris Upshaw (From Yukari) <chrisaupshaw@gmail.com>
copyright:           2021 Chris Upshaw (From Yukari)
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/chrisaupshaw/advent.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , Relude
  
  mixins:              base hiding (Prelude)
                     , Relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable advent
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite advent-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark advent-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
