cabal-version:       2.4
name:                advent
version:             0.0.0.0
synopsis:            2021 advent of code
description:         2021 advent of code
homepage:            https://github.com/chrisaupshaw/advent
bug-reports:         https://github.com/chrisaupshaw/advent/issues
license:             MIT
license-file:        LICENSE
author:              Chris Upshaw (From Yukari)
maintainer:          Chris Upshaw (From Yukari) <chrisaupshaw@gmail.com>
copyright:           2021 Chris Upshaw (From Yukari)
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.1

source-repository head
  type:                git
  location:            https://github.com/chrisaupshaw/advent.git

common common-options
  build-depends:       base ^>= 4.15.0.0
                     , relude ^>= 1.0.0.1
                     , conduit
                     , conduit-extra
                     , megaparsec
                     , lens
                     , matrix
                     , linear
                     , matrix
                     , vector
  
  mixins:              base hiding (Prelude)
                     , relude
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import: common-options
  hs-source-dirs:  src
  exposed-modules: Advent

executable advent
  import:              common-options
  build-depends:       advent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite advent-test
  import:              common-options
  build-depends:       QuickCheck
                     , hspec
                     , quickcheck-instances
                     , advent
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark advent-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
